WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32384
Mixed content shouldn't trigger for plug-ins without URLs
https://bugs.webkit.org/show_bug.cgi?id=32384
Summary
Mixed content shouldn't trigger for plug-ins without URLs
Adam Barth
Reported
2009-12-10 11:06:17 PST
Mixed content shouldn't trigger for plug-ins without URLs
Attachments
Patch
(1.31 KB, patch)
2009-12-10 11:08 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(4.44 KB, patch)
2009-12-10 11:09 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-12-10 11:06:36 PST
This apparently affects Gmail. Patch forthcoming.
Adam Barth
Comment 2
2009-12-10 11:08:28 PST
Created
attachment 44626
[details]
Patch
Adam Barth
Comment 3
2009-12-10 11:09:31 PST
Created
attachment 44627
[details]
Patch
WebKit Review Bot
Comment 4
2009-12-10 11:13:11 PST
style-queue ran check-webkit-style on
attachment 44627
[details]
without any errors.
Adam Barth
Comment 5
2009-12-10 19:12:15 PST
Comment on
attachment 44627
[details]
Patch Clearing flags on attachment: 44627 Committed
r51977
: <
http://trac.webkit.org/changeset/51977
>
Adam Barth
Comment 6
2009-12-10 19:12:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug