2009-12-10  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        Mixed content shouldn't trigger for plug-ins without URLs
        https://bugs.webkit.org/show_bug.cgi?id=32384

        * http/tests/security/mixedContent/empty-url-plugin-in-frame-expected.txt: Added.
        * http/tests/security/mixedContent/empty-url-plugin-in-frame.html: Added.
        * http/tests/security/mixedContent/resources/frame-with-empty-url-plugin.html: Added.
2009-12-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Mixed content shouldn't trigger for plug-ins without URLs
        https://bugs.webkit.org/show_bug.cgi?id=32384

        These plug-ins cannot be controlled by active network attackers, so
        there's no reason to trigger a mixed content warning.

        Test: http/tests/security/mixedContent/empty-url-plugin-in-frame.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::isMixedContent):

Canonical link: https://commits.webkit.org/43402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51977 268f45cc-cd09-0410-ab3c-d52691b4dbfc